[gd_scene load_steps=3 format=3 uid="uid://b0dirb3l1yk8s"]

[ext_resource type="Theme" uid="uid://b288c5n3b1ipm" path="res://MainUITheme.tres" id="1_32e60"]
[ext_resource type="Script" uid="uid://pcybnvlu8upw" path="res://Prefabs/YesNoPopup/yes_no_popup.gd" id="2_kvao1"]

[node name="StringInputPopup" type="Control"]
z_index = 20
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_32e60")
script = ExtResource("2_kvao1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="Box" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -500.0
offset_top = 200.0
offset_right = 500.0
offset_bottom = 568.0
grow_horizontal = 2
color = Color(0.0980392, 0.101961, 0.196078, 1)

[node name="HeaderLabel" type="Label" parent="Box"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 88.0
grow_horizontal = 2
text = "PLACEHOLDER MESSAGE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="YesButton" type="Button" parent="Box"]
custom_minimum_size = Vector2(290, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -476.0
offset_top = 88.0
offset_right = 476.0
offset_bottom = 208.0
grow_horizontal = 2
text = "Yes"

[node name="NoButton" type="Button" parent="Box"]
custom_minimum_size = Vector2(290, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -476.0
offset_top = 224.0
offset_right = 476.0
offset_bottom = 344.0
grow_horizontal = 2
text = "No"

[connection signal="pressed" from="Box/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="Box/NoButton" to="." method="_on_no_button_pressed"]
